# ce-numble-k8s-monitoring

./: .gitignore  README.md
docker-images/fastapi/: Dockerfile  main.py  pyproject.toml
docker-images/fastapi-advance/: Dockerfile  pyproject.toml
docker-images/koa/: .eslintrc.json  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
docker-images/koa/src/: index.ts  main.js  main.js.map
week01/: fastapi-deploy.yaml  ingress.yaml  koa-deploy.yaml  nginx-deploy.yaml  nginx-svc.yaml  policy.yaml
week02/: argocd-ingress.yaml  cluster-issuer.yaml
week02/mychart/: values.yaml
week02/mychart/templates/: configmap.yaml
